# govee-local-api

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  MULTI_INTERFACE_CHANGES.md  NETWORK_MASKS.md  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy.yml  python-publish.yml  tests.yml
example/: extract-devices.py  main.py
govee_local_api/: __init__.py  controller.py  device.py  message.py
junit/: test-results.xml
src/govee_local_api/: __init__.py  controller.py  device.py  device_registry.py  light_capabilities.py  message.py  protocol.py
tests/: test_device.py  test_message.py  test_network_masks.py  test_registry.py
