[metadata]
name = "govee-local-api"
version = attr: govee_local_api.__version__
author = "Galorhallen"
author_email = "andrea.ponte1987@gmail.com"
url =   
description = "Library to communicate with Govee devices via local API"
long_description = file: README.md
long_description_content_type = text/markdown
readme = "README.md"
requires-python = ">=3.9"
classifiers =
    "Development Status :: 5 - Production/Stable"
    "Programming Language :: Python :: 3"
    "License :: OSI Approved :: MIT License"
    "Operating System :: OS Independent"
